--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
                       <h1 id="did-resolution-security-and-trust-profile"><a class="toc-anchor" href="#did-resolution-security-and-trust-profile" >§</a> DID Resolution Security and Trust Profile</h1>
 <p><strong>Specification Status:</strong> <a path-0="github.com"path-1="decentralized-identity"path-2="org"path-3="blob"path-4="master"path-5="work-item-lifecycle.md"href="https://github.com/decentralized-identity/org/blob/master/work-item-lifecycle.md" >Draft</a></p>
 <p><strong>Latest Draft:</strong>
-<a path-0="identity.foundation"path-1="did-resolution-security-trust-profile"href="https://identity.foundation/did-resolution-security-trust-profile" >identity.foundation/did-resolution-security-trust-profile</a></p>
+<a path-0="peacekeeper.github.io"path-1="did-resolution-security-trust-profile"path-2=""href="https://peacekeeper.github.io/did-resolution-security-trust-profile/" >https://peacekeeper.github.io/did-resolution-security-trust-profile/</a></p>
 <dl>
 <dt><strong>Editors:</strong></dt>
 <dd><a path-0="www.linkedin.com"path-1="in"path-2="markus-sabadello-353a0821"path-3=""href="https://www.linkedin.com/in/markus-sabadello-353a0821/" >Markus Sabadello</a> (Danube Tech)</dd>
